{
  "version": 4,
  "terraform_version": "1.7.0",
  "serial": 10,
  "lineage": "cd950f57-d23c-62a5-0588-3ad81d3d2099",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "taskflow_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0c02fb55956c7d316",
            "arn": "arn:aws:ec2:us-east-1:826087506724:instance/i-06772df2357b3c17d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06772df2357b3c17d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-04aa8c8e6fe23dc02"
              }
            ],
            "primary_network_interface_id": "eni-04aa8c8e6fe23dc02",
            "private_dns": "ip-10-0-1-56.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.56",
            "public_dns": "ec2-44-214-106-198.compute-1.amazonaws.com",
            "public_ip": "44.214.106.198",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09612046b7c4ed2bd",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05e28b63d0a7f48e0",
            "tags": {
              "Name": "taskflow-server"
            },
            "tags_all": {
              "Name": "taskflow-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bbd1814c5d9fedb1"
            ]
          },
          "dependencies": [
            "aws_security_group.taskflow_sg",
            "aws_subnet.taskflow_subnet",
            "aws_vpc.taskflow_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "taskflow_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:826087506724:internet-gateway/igw-07f35d801157fd006",
            "id": "igw-07f35d801157fd006",
            "owner_id": "826087506724",
            "region": "us-east-1",
            "tags": {
              "Name": "taskflow-igw"
            },
            "tags_all": {
              "Name": "taskflow-igw"
            },
            "vpc_id": "vpc-0c343df99ea8f1cc3"
          },
          "dependencies": [
            "aws_vpc.taskflow_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "taskflow_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:826087506724:route-table/rtb-0ef891668eb73b706",
            "id": "rtb-0ef891668eb73b706",
            "owner_id": "826087506724",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07f35d801157fd006",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "taskflow-rt"
            },
            "tags_all": {
              "Name": "taskflow-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c343df99ea8f1cc3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.taskflow_igw",
            "aws_vpc.taskflow_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "taskflow_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b855b31153036d41",
            "region": "us-east-1",
            "route_table_id": "rtb-0ef891668eb73b706",
            "subnet_id": "subnet-05e28b63d0a7f48e0"
          },
          "dependencies": [
            "aws_internet_gateway.taskflow_igw",
            "aws_route_table.taskflow_rt",
            "aws_subnet.taskflow_subnet",
            "aws_vpc.taskflow_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "taskflow_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:826087506724:security-group/sg-0bbd1814c5d9fedb1",
            "description": "Allow web and SSH traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bbd1814c5d9fedb1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9090
              }
            ],
            "name": "taskflow-sg",
            "name_prefix": "",
            "owner_id": "826087506724",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "taskflow-sg"
            },
            "tags_all": {
              "Name": "taskflow-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c343df99ea8f1cc3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.taskflow_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "taskflow_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:826087506724:subnet/subnet-05e28b63d0a7f48e0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05e28b63d0a7f48e0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "826087506724",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "taskflow-subnet"
            },
            "tags_all": {
              "Name": "taskflow-subnet"
            },
            "vpc_id": "vpc-0c343df99ea8f1cc3"
          },
          "dependencies": [
            "aws_vpc.taskflow_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "taskflow_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:826087506724:vpc/vpc-0c343df99ea8f1cc3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09d82ea2747bb430a",
            "default_route_table_id": "rtb-080efc91e83aea883",
            "default_security_group_id": "sg-0f026ff05e6d0e81c",
            "dhcp_options_id": "dopt-09f9233c3500df94e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c343df99ea8f1cc3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-080efc91e83aea883",
            "owner_id": "826087506724",
            "region": "us-east-1",
            "tags": {
              "Name": "taskflow-vpc"
            },
            "tags_all": {
              "Name": "taskflow-vpc"
            }
          }
        }
      ]
    }
  ]
}